--- a/index.html
+++ b/index.html
@@ -397,8 +397,7 @@
                             <div class="sqs-content">
                                 <div class="sqs-block">
                                     <div class="sqs-image sqs-layout" style="align-items: center;">
-                                        <!-- <img class="sqs-image__elem" src="/commonfiles/images/profile_01.jpg"> -->
-                                        <img class="sqs-image__elem" src="/commonfiles/images/profile_02.png">
+                                        <img class="sqs-image__elem" src="commonfiles/images/profile_01.jpg">
                                     </div>
                                 </div>
                             </div>
