--- a/index.html
+++ b/index.html
@@ -613,7 +613,9 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="#">View Website</a>
+                                        <a class="sqs-button__elem" href="/lottetower_ver/index.html"
+                                            target="blank">View
+                                            Website</a>
                                     </div>
                                 </div>
                             </div>
