--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="www.johnstones.dothome.co.kr">View
+                                        <a class="sqs-button__elem" href="johnstones.dothome.co.kr">View
                                             Website</a>
                                     </div>
                                 </div>
