--- a/lottetower_hor_201224/index.html
+++ b/lottetower_hor_201224/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body style="overflow:hidden;" oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
+<body style="overflow:hidden1;" oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 
     <div class="debug_area">
         <button class="btn" onClick="javascript:onClickDebug01();">D01</button>
