--- a/index.html
+++ b/index.html
@@ -5,383 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baenk portfolio에 오신 것을 환영합니다</title>
     <link rel="stylesheet" href="./include/css/lib/font.css">
+    <link rel="stylesheet" href="./include/css/ui.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            text-decoration: none;
-            font-family: 'Noto Sans CJK';
-        }
 
-        body {
-            background: #fff;
-            color: #272727;
-        }
-
-        .wrap {
-            position: relative;
-            width: 100%;
-            margin: 0 auto;
-        }
-
-        h1+h1,
-        h1+h2,
-        h1+h3,
-        h2+h1,
-        h2+h2,
-        h2+h3,
-        h3+h1,
-        h3+h2,
-        h3+h3 {
-            margin-top: 15px;
-        }
-
-        h1+p {
-            margin-top: 15px;
-            /* color: #8c8989; */
-            color: #ada8a8;
-        }
-
-        h2+p {
-            font-size: 12px;
-            font-weight: 400;
-            /* color: #8c8989; */
-            color: #ada8a8;
-        }
-
-        /* font-size 
-            640:
-            40px;
-
-            768~:
-            43px;
-        */
-        h1 {
-            font-size: 40px;
-            font-weight: 500;
-            letter-spacing: 0;
-            line-height: 1.1em;
-            /* margin: 0.1em 0; */
-        }
-
-        h2 {
-            font-weight: 400;
-            /* word-break: keep-all; */
-            line-height: 1.8em;
-        }
-
-        p {
-            letter-spacing: 0.1rem;
-            line-height: 1.8rem;
-        }
-
-        p>span {
-            padding-right: 7px;
-        }
-
-        li {
-            padding-bottom: 20px;
-        }
-
-        .sub-title {
-            color: #31c4b0;
-        }
-
-        .sqs-block-text {
-            /* max-width: 600px; */
-        }
-
-        .sqs-block-text-inner li::before {
-            content: "▫︎";
-            min-width: 45px;
-            margin-top: 1px;
-            margin-left: -50px;
-            padding-right: 5px;
-            box-sizing: border-box;
-            text-align: right;
-            vertical-align: top;
-            float: left;
-        }
-
-        .sqs-block-text-inner li::after {
-            clear: both;
-        }
-
-        /* media screen
-            max-width
-            640px
-            768px
-            960px
-            1024px
-        */
-
-        #new-page-03 {
-            box-shadow: 0 0 45vw 14vw black inset;
-        }
-
-        .index-page-bg-01 {
-            background: url(./commonfiles/images/bg_01.png) center center no-repeat;
-            background-size: cover;
-            /* color: #fff; */
-        }
-
-        .index-page-bg-02 {
-            background: url(./commonfiles/images/bg1_01.png) center center no-repeat;
-            background-size: cover;
-            color: #fff;
-        }
-
-        /* index-page-content */
-        /* padding 
-            640:
-            padding-left: 20px;
-            padding-right: 20px;
-
-            768:
-            padding-left: 36px;
-            padding-right: 36px;
-
-            960:
-            padding-left: 48px;
-            padding-right: 48px;
-
-            1024:
-            padding-left: 64px;
-            padding-right: 64px;
-
-            1024~:
-            padding: 130px 100px;
-        */
-        .index-page-content {
-            padding-top: 120px;
-            padding-bottom: 120px;
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-
-        .index-page-content--big {
-            padding-top: 300px;
-            padding-bottom: 300px;
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-
-        .index-page-content--small {
-            padding-top: 0px;
-            padding-bottom: 0px;
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-
-        .sqs-layout {
-            max-width: 1200px;
-            margin: auto;
-            display: flex;
-        }
-
-        .sqs-layout-direction {
-            flex-flow: row wrap;
-        }
-
-        .sqs-col-1 {
-            width: 8.33%;
-        }
-
-        .sqs-col-2 {
-            width: 16.66%;
-        }
-
-        .sqs-col-5 {
-            width: 41.65%;
-            /* background: coral; */
-        }
-
-        .sqs-col-6 {
-            width: 50%;
-        }
-
-        .sqs-col-8 {
-            width: 66.66%;
-        }
-
-        .sqs-col-10 {
-            width: 83.33%;
-            /* display: flex; */
-        }
-
-        .sqs-col-12 {
-            width: 100%;
-        }
-
-        .sqs-spacer {
-            height: 60px;
-        }
-
-        .sqs-block {
-            padding: 17px;
-        }
-
-        .sqs-block-text-inner {
-            padding-top: 20px;
-            padding-left: 50px;
-        }
-
-        .sqs-content {
-            margin: 0 auto;
-            padding: 17px;
-        }
-
-        .sqs-about {
-            max-width: 700px;
-        }
-
-        .sqs-image {}
-
-        .sqs-image--modify {
-            position: relative;
-        }
-
-        .bg-color-light-gray {
-            /* background: #efeeed; */
-            background: #f5f2ef;
-        }
-
-        .bg-color-light-orange {
-            background: #f3b582;
-        }
-
-        .bg-color-black {
-            background: #272727;
-        }
-
-        @media screen and (max-width:960px) {
-            .sqs-spacer-960 {
-                display: none;
-            }
-
-            .sqs-col-8 {
-                /* width: auto; */
-                width: 100%;
-            }
-
-            .sqs-col-10 {
-                width: auto;
-            }
-        }
-
-        @media screen and (max-width:640px) {
-            .sqs-layout-direction {
-                flex-flow: column wrap;
-            }
-
-            .sqs-block {
-                padding-left: 0;
-                padding-right: 0;
-            }
-
-            .sqs-col-1 {
-                width: auto;
-            }
-
-            .sqs-col-2 {
-                width: auto;
-            }
-
-            .sqs-col-5 {
-                width: auto;
-            }
-
-            .sqs-col-6 {
-                width: auto;
-            }
-
-            .sqs-col-8 {
-                /* width: 66%; */
-                width: auto;
-            }
-
-            .sqs-col-10 {
-                width: auto;
-            }
-
-            .sqs-spacer {
-                /* display: none; */
-            }
-
-            .sqs-content {
-                padding-left: 0;
-                padding-right: 0;
-            }
-
-            .sqs-image {
-                max-height: 640px;
-                overflow: hidden;
-            }
-
-            .sqs-image--modify {
-                /* top: -30px; */
-            }
-        }
-
-        .center {
-            text-align: center;
-        }
-
-
-
-        .sqs-image__elem {
-            width: 100%;
-        }
-
-        .sqs-block .sqs-button .sqs-button__elem {
-            position: relative;
-            color: #272727;
-            padding: 13px 21px;
-            font-size: 19px;
-            font-weight: 400;
-            letter-spacing: .03em;
-            border: 1px solid #272727;
-            /* border: 1px solid #000; */
-            display: inline-block;
-            z-index: 2;
-        }
-
-        .sqs-block .sqs-button .sqs-button__elem::before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            margin: auto;
-            width: 0;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            transition: width .3s ease;
-            z-index: -1;
-        }
-
-        .sqs-block .sqs-button .sqs-button__elem:hover {
-            color: #fff;
-            /* border: 1px solid #000;
-            background: rgba(0, 0, 0, 0.7); */
-            transition: color, background-color .3s ease;
-        }
-
-        .sqs-block .sqs-button .sqs-button__elem:hover::before {
-            width: 100%;
-        }
-
-        .footer-page {
-            padding: 48px 20px;
-            color: #fff;
-        }
-
-        .bg-color-light-charcoal {
-            background: #383636;
-        }
     </style>
 </head>
 
@@ -396,14 +24,16 @@
 
         <!-- section-start -->
         <section id="new-page-02" class="index-page">
-            <div class="index-page-content" style="padding-top: 0px; padding-bottom: 0px;">
+            <div class="index-page-content padding-top__none padding-bottom__none">
                 <div class="">
                     <!-- <div class="sqs-col-2 sqs-spacer"></div> -->
                     <div class="sqs-col-12">
                         <div class="sqs-content center">
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
-                                    <h2>Baenk Portfolio</h2>
+                                    <a href="http://baenk.github.io/portfolio/">
+                                        <h2>Baenk Portfolio</h2>
+                                    </a>
                                     <p></p>
                                 </div>
                             </div>
@@ -414,7 +44,7 @@
             </div>
         </section>
 
-        <section id="new-page-03" class="index-page index-page-bg-03 bg-color-light-charcoal">
+        <section id="new-page-03" class="index-page bg-color-light-charcoal">
             <div class="index-page-content" style="padding-bottom: 0px;">
                 <div class="sqs-layout sqs-layout-direction">
                     <div class="sqs-col-1 sqs-spacer-960"></div>
@@ -436,7 +66,7 @@
                                 <div class="sqs-block">
                                     <div class="sqs-block-text">
                                         <!-- <h2>Profile</h2> -->
-                                        <h1 style="color: #fff;">프론트엔드 개발자를 찾고있나요?</h1>
+                                        <h1 class="text-color__white">프론트엔드 개발자를 찾고있나요?</h1>
                                         <!-- <h3>프론트엔드 개발자 배남기 입니다</h3> -->
                                     </div>
                                 </div>
@@ -445,7 +75,8 @@
                                         <!-- <p>프론트엔드 개발자를 꿈꾸는 배남기입니다 웹페이지를 사용하는 고객들이 UI/UX에 대해 느끼는 사용감을 향상시킬 수 있도록
                                             새로운 아이디어를 탐구하고 있습니다!
                                         </p> -->
-                                        <p style="color: #ada8a8;">안녕하세요. 프론트엔드 개발자 배남기 입니다. 다양한 경험과 창의적이고 예술적인 감각으로
+                                        <p class="text-color__light-gray">안녕하세요. 프론트엔드 개발자 배남기 입니다. 다양한 경험과 창의적이고 예술적인
+                                            감각으로
                                             웹사이트를 만들어갑니다. 지금 만나보세요! 당신의 연락을 기다립니다
                                         </p>
                                     </div>
@@ -477,12 +108,12 @@
             </div>
         </section>
 
-        <section id="new-page-04" class="index-page index-page-bg-03">
+        <section id="new-page-04" class="index-page">
             <div class="index-page-content">
                 <div class="sqs-layout sqs-layout-direction">
                     <div class="sqs-col-2 sqs-spacer-960"></div>
                     <div class="sqs-col-8 sqs-layout sqs-layout-direction">
-                        <div class="sqs-content sqs-about">
+                        <div class="sqs-content max-width-700">
                             <div class="sqs-block center">
                                 <div class="sqs-block-text`">
                                     <!-- <h1>About</h1> -->
@@ -493,7 +124,7 @@
                             <div class="sqs-col-12 sqs-spacer"></div>
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
-                                    <h2 class="sub-title">Profile</h2>
+                                    <h2 class="text-color__mint">Profile</h2>
                                     <ul class="sqs-block-text-inner">
                                         <li>
                                             <p><span>이름 :</span>배남기</p>
@@ -513,7 +144,7 @@
                             <div class="sqs-spacer"></div>
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
-                                    <h2 class="sub-title">Experience</h2>
+                                    <h2 class="text-color__mint">Experience</h2>
                                     <!-- <h1>경력</h1> -->
                                     <ul class="sqs-block-text-inner">
                                         <li>
@@ -531,7 +162,7 @@
                             <div class="sqs-spacer"></div>
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
-                                    <h2 class="sub-title">Education</h2>
+                                    <h2 class="text-color__mint">Education</h2>
                                     <!-- <h1>경력</h1> -->
                                     <ul class="sqs-block-text-inner">
                                         <li>
@@ -548,7 +179,7 @@
                             <div class="sqs-spacer"></div>
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
-                                    <h2 class="sub-title">Skills & Tools</h2>
+                                    <h2 class="text-color__mint">Skills & Tools</h2>
                                     <!-- <h1>기술 및 작업도구</h1> -->
                                     <ul class="sqs-block-text-inner">
                                         <li>
@@ -577,10 +208,10 @@
             </div>
         </section>
 
-        <section id="new-page-05" class="index-page index-page-bg-01">
+        <section id="new-page-05" class="index-page bg-image-index-01">
             <div class="index-page-content">
                 <div class="sqs-layout sqs-layout-direction">
-                    <div class="sqs-col-2 sqs-spacer"></div>
+                    <div class="sqs-col-2 sqs-spacer-960"></div>
                     <div class="sqs-col-8">
                         <div class="sqs-content">
                             <div class="sqs-block">
@@ -597,12 +228,12 @@
                             </div> -->
                         </div>
                     </div>
-                    <div class="sqs-col-2 sqs-spacer"></div>
+                    <div class="sqs-col-2 sqs-spacer-960"></div>
                 </div>
             </div>
         </section>
 
-        <section id="new-page-06" class="index-page index-page-bg-03">
+        <section id="new-page-06" class="index-page">
             <div class="index-page-content">
                 <div class="sqs-layout sqs-layout-direction">
                     <div class="sqs-col-1 sqs-spacer-960"></div>
@@ -633,7 +264,8 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="./lottetower_ver_201224/index.html">View
+                                        <a class="sqs-button__elem" href="./lottetower_ver_201224/index.html"
+                                            target="blank">View
                                             Website</a>
                                     </div>
                                 </div>
@@ -655,7 +287,8 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="./lottetower_hor_201224/index.html">View
+                                        <a class="sqs-button__elem" href="./lottetower_hor_201224/index.html"
+                                            target="blank">View
                                             Website</a>
                                     </div>
                                 </div>
@@ -689,7 +322,8 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="http://johnstones.dothome.co.kr">View
+                                        <a class="sqs-button__elem" href="http://johnstones.dothome.co.kr"
+                                            target="blank">View
                                             Website</a>
                                     </div>
                                 </div>
@@ -710,7 +344,8 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="#">View Website</a>
+                                        <a class="sqs-button__elem" href="http://baenk02.dothome.co.kr"
+                                            target="blank">View Website</a>
                                     </div>
                                 </div>
                             </div>
@@ -730,7 +365,8 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="#">View Website</a>
+                                        <a class="sqs-button__elem" href="http://baenk03.dothome.co.kr"
+                                            target="blank">View Website</a>
                                     </div>
                                 </div>
                             </div>
@@ -750,7 +386,8 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="#">View Website</a>
+                                        <a class="sqs-button__elem" href="http://baenk.dothome.co.kr"
+                                            target="blank">View Website</a>
                                     </div>
                                 </div>
                             </div>
@@ -763,9 +400,9 @@
         </section>
 
         <!-- footer-start -->
-        <footer id="new-page-footer" class="footer-page bg-color-light-charcoal">
+        <footer id="new-page-footer" class="footer-page text-color__white bg-color-light-charcoal">
             <div class="sqs-layout sqs-layout-direction">
-                <div class="sqs-col-2"></div>
+                <div class="sqs-col-2 sqs-spacer-960"></div>
                 <div class="sqs-col-8">
                     <div class="sqs-content">
                         <div class="sqs-block">
@@ -786,7 +423,7 @@
                         </div> -->
                     </div>
                 </div>
-                <div class="sqs-col-2"></div>
+                <div class="sqs-col-2 sqs-spacer-960"></div>
             </div>
         </footer>
     </div>
