--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <!-- section-start -->
         <section id="new-page-02" class="index-page">
             <div class="index-page-content padding-top__none padding-bottom__none">
-                <div class="">
-                    <!-- <div class="sqs-col-2 sqs-spacer"></div> -->
+                <div>
                     <div class="sqs-col-12">
                         <div class="sqs-content center">
                             <div class="sqs-block">
@@ -36,13 +35,12 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="sqs-col-2 sqs-spacer"></div> -->
                 </div>
             </div>
         </section>
 
         <section id="new-page-03" class="index-page bg-color-light-charcoal">
-            <div class="index-page-content" style="padding-bottom: 0px;">
+            <div class="index-page-content">
                 <div class="sqs-layout sqs-layout-direction">
                     <div class="sqs-col-1 sqs-spacer-960"></div>
                     <div class="sqs-col-10 sqs-layout sqs-layout-direction">
@@ -50,52 +48,28 @@
                             <div class="sqs-content">
                                 <div class="sqs-block">
                                     <div class="sqs-image sqs-layout" style="align-items: center;">
-                                        <!-- <img class="sqs-image__elem" src="./commonfiles/images/profile_01.jpg"> -->
                                         <img class="sqs-image__elem" src="./commonfiles/images/profile_02.png">
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="sqs-col-1 sqs-spacer"></div> -->
+
                         <div class="sqs-col-6"
                             style="display: flex; flex-flow: row wrap; align-items: center; word-break: keep-all;">
                             <div class="sqs-content">
                                 <div class="sqs-block">
                                     <div class="sqs-block-text">
-                                        <!-- <h2>Profile</h2> -->
                                         <h1 class="text-color__white">프론트엔드 개발자를 찾고있나요?</h1>
-                                        <!-- <h3>프론트엔드 개발자 배남기 입니다</h3> -->
                                     </div>
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-block-text">
-                                        <!-- <p>프론트엔드 개발자를 꿈꾸는 배남기입니다 웹페이지를 사용하는 고객들이 UI/UX에 대해 느끼는 사용감을 향상시킬 수 있도록
-                                            새로운 아이디어를 탐구하고 있습니다!
-                                        </p> -->
                                         <p class="text-color__light-gray">안녕하세요. 프론트엔드 개발자 배남기 입니다. 다양한 경험과 창의적이고 예술적인
                                             감각으로
                                             웹사이트를 만들어갑니다. 지금 만나보세요! 당신의 연락을 기다립니다
                                         </p>
                                     </div>
                                 </div>
-
-
-                                <!-- <ul class="sqs-block-text-inner">
-                                            <li>
-                                                <p><span>이름 :</span>배남기</p>
-                                            </li>
-                                            <li>
-                                                <p><span>연락처 :</span>010-0000-0000</p>
-                                            </li>
-                                            <li>
-                                                <p><span>이메일 :</span>itwasgreat@naver.com</p>
-                                            </li>
-                                            <li>
-                                                <p><span>홈페이지 :</span>www.musenaus.git.io</p>
-                                            </li>
-                                        </ul> -->
-
-
                             </div>
                         </div>
                     </div>
@@ -113,9 +87,7 @@
                         <div class="sqs-content max-width-700">
                             <div class="sqs-block center">
                                 <div class="sqs-block-text`">
-                                    <!-- <h1>About</h1> -->
                                     <h1>About</h1>
-                                    <!-- <p>This is my portfolio</p> -->
                                 </div>
                             </div>
                             <div class="sqs-col-12 sqs-spacer"></div>
@@ -142,7 +114,6 @@
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
                                     <h2 class="text-color__mint">Experience</h2>
-                                    <!-- <h1>경력</h1> -->
                                     <ul class="sqs-block-text-inner">
                                         <li>
                                             <p><span>엘토브 :</span></p>
@@ -160,7 +131,6 @@
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
                                     <h2 class="text-color__mint">Education</h2>
-                                    <!-- <h1>경력</h1> -->
                                     <ul class="sqs-block-text-inner">
                                         <li>
                                             <p><span>웹 퍼블리셔 전문가 양성과정 :</span></p>
@@ -177,7 +147,6 @@
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
                                     <h2 class="text-color__mint">Skills & Tools</h2>
-                                    <!-- <h1>기술 및 작업도구</h1> -->
                                     <ul class="sqs-block-text-inner">
                                         <li>
                                             <p>Javascript, css, html, jQuery, react(공부 중)</p>
@@ -214,15 +183,9 @@
                             <div class="sqs-block">
                                 <div class="sqs-block-text">
                                     <h3>Baenk's Signature product</h3>
-                                    <!-- <h1>Crafted to <span>Convert</span></h1> -->
                                     <h1>What did he make?</h1>
                                 </div>
                             </div>
-                            <!-- <div class="sqs-block">
-                                <div class="sqs-button">
-                                    <a class="sqs-button__elem" href="#">Learn More</a>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                     <div class="sqs-col-2 sqs-spacer-960"></div>
@@ -279,7 +242,6 @@
                                     <div class="sqs-block-text center">
                                         <h2>Lotte Tower Kiosk (가로형)</h2>
                                         <p>램 사용량이 높으며, 디스크 용량상 일부 이미지가 누락되었습니다</p>
-                                        <!-- <span>(이 페이지는 램 사용량이 높습니다)</span> -->
                                     </div>
                                 </div>
                                 <div class="sqs-block">
@@ -397,27 +359,41 @@
         </section>
 
         <!-- footer-start -->
-        <footer id="new-page-footer" class="footer-page text-color__white bg-color-light-charcoal">
+        <footer id="new-page-footer" class="footer-page padding-bottom__none text-color__white bg-color-light-charcoal">
             <div class="sqs-layout sqs-layout-direction">
                 <div class="sqs-col-2 sqs-spacer-960"></div>
                 <div class="sqs-col-8">
                     <div class="sqs-content">
                         <div class="sqs-block">
                             <div class="sqs-block-text">
-                                <h3>Our Signature Course</h3>
-                                <h1>Crafted to <span>Convert</span></h1>
-                                <p>Your complete blueprint for building and launching an irresistible and impactful
-                                    website
-                                    without
-                                    the
-                                    uncertainty and tech overwhelm.</p>
+                                <h3>Frontend developer</h3>
+                                <h1>Contact me now!</h1>
+                                <!-- <h1>Crafted to <span>Convert</span></h1> -->
+                                <p>잘 둘러 보셨나요? 지금까지 Baenk의 포트폴리오였습니다. 저는 이처럼 다양한 경험을 통하여 개발자로써 필요한 역량을 쌓았고, 함께 할 준비를
+                                    마쳤습니다. 당신의 연락을 기다립니다. 지금 바로 연락 주세요!
+                                </p>
                             </div>
                         </div>
-                        <!-- <div class="sqs-block">
-                            <div class="sqs-button">
-                                <a class="sqs-button__elem" href="#">Learn More</a>
+                    </div>
+                </div>
+                <div class="sqs-col-2 sqs-spacer-960"></div>
+            </div>
+
+            <div class="sqs-layout sqs-layout-direction sqs-layout__row-center">
+                <div class="sqs-col-2 sqs-spacer-960"></div>
+                <div class="sqs-col-8">
+                    <div class="sqs-content center">
+                        <div class="sqs-block">
+                            <div class="sqs-block-text">
+                                <!-- <p class="footer-copy-size text-color__light-gray">사이트 내 모든 디자인 및 소스코드에 대한 권리는 해당 저작권자에게
+                                    있습니다.
+                                    <br>
+                                    타인의 저작물을 불법적으로 이용시에는 제재가 가해질 수 있습니다
+                                </p> -->
+                                <p class="footer-copy-size text-color__light-gray">Copyright &copy; Baenk 2021. All
+                                    rights reserved.</p>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
                 <div class="sqs-col-2 sqs-spacer-960"></div>
