--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
 
         <section id="new-page-03" class="index-page bg-color-light-charcoal">
-            <div class="index-page-content">
+            <div class="index-page-content padding-bottom__none">
                 <div class="sqs-layout sqs-layout-direction">
                     <div class="sqs-col-1 sqs-spacer-960"></div>
                     <div class="sqs-col-10 sqs-layout sqs-layout-direction">
