weather icon modify

--- a/lottetower_ver_201224/intro.html
+++ b/lottetower_ver_201224/intro.html
@@ -49,7 +49,7 @@
         <header>
             <div class="weather_wrap">
                 <div class="w_icon_part">
-                    <img id="id_weather_icon" src="./" style="width:85px;">
+                    <img id="id_weather_icon" src="" style="width:85px;">
                 </div>
                 <div class="w_text_part">
                     <div class="w_tpr_box">
