--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="http://johnstones.dothome.co.kr"
+                                        <a class="sqs-button__elem" href="./johnstones/index.html"
                                             target="blank">View
                                             Website</a>
                                     </div>
@@ -303,7 +303,7 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="http://baenk02.dothome.co.kr"
+                                        <a class="sqs-button__elem" href="./shakeshack/index.html"
                                             target="blank">View Website</a>
                                     </div>
                                 </div>
@@ -324,7 +324,7 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="http://baenk03.dothome.co.kr"
+                                        <a class="sqs-button__elem" href="./museum/index.html"
                                             target="blank">View Website</a>
                                     </div>
                                 </div>
@@ -345,7 +345,7 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
-                                        <a class="sqs-button__elem" href="http://baenk.dothome.co.kr"
+                                        <a class="sqs-button__elem" href="./baenk/index.html"
                                             target="blank">View Website</a>
                                     </div>
                                 </div>
