chrome최적화 명시

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <div class="sqs-block">
                                     <div class="sqs-block-text center">
                                         <h2>Lotte Tower Kiosk (세로형)</h2>
-                                        <p>램 사용량이 높으며, 디스크 용량상 일부 이미지가 누락되었습니다</p>
+                                        <p>램 사용량이 높으며, 디스크 용량상 일부 이미지가 누락되었습니다<br>(chrome에 최적화 되었습니다)</p>
                                     </div>
                                 </div>
                                 <div class="sqs-block">
@@ -241,7 +241,7 @@
                                 <div class="sqs-block">
                                     <div class="sqs-block-text center">
                                         <h2>Lotte Tower Kiosk (가로형)</h2>
-                                        <p>램 사용량이 높으며, 디스크 용량상 일부 이미지가 누락되었습니다</p>
+                                        <p>램 사용량이 높으며, 디스크 용량상 일부 이미지가 누락되었습니다<br>(chrome에 최적화 되었습니다)</p>
                                     </div>
                                 </div>
                                 <div class="sqs-block">
