경력사항 추가

--- a/index.html
+++ b/index.html
@@ -116,13 +116,25 @@
                                     <h2 class="text-color__mint">Experience</h2>
                                     <ul class="sqs-block-text-inner">
                                         <li>
+                                            <p><span>넷스트림 :</span></p>
+                                            <p>이노베이션팀 프론트엔드 개발자 (2021.07.26 - 2021.10.30 계약직)</p>
+                                            <p>춘천 카페거리 메타버스 프로젝트에 참여하였습니다.(2021.07.26 ~ 2021.09.03)</p>
+                                            <br>
+                                            <p>- 프로젝트 UI 퍼블리싱 100%</p>
+                                            <p>- 2d 사이드 프론트엔드 개발 100%</p>
+                                            <p>- WebGL(3d)과 데이터를 연동하여 3d 상에서 아이템 획득, npc 클릭 등의 이벤트가 감지되면 UI 적으로 해당 내용을 반영</p>
+                                            <p>- 현재 장착중인 아이템 변경 등 UI를 조작하면 3d상에 적용 되도록 프론트 개발</p>
+                                        </li>
+                                    </ul>
+                                    <ul class="sqs-block-text-inner">
+                                        <li>
                                             <p><span>엘토브 :</span></p>
                                             <p>R&D 부서 개발팀 프론트엔드 개발자(2020.09.14 - 2020.12.31)</p>
                                             <p>웹개발로 만드는 Lotte Tower Kiosk 프로젝트에 참여했습니다</p>
                                             <br>
-                                            <p>kiosk 가로형 및 세로형 웹 퍼블리싱 100%</p>
-                                            <p>ajex 통신으로 다국어 json 파일 로드 및 언어별 키오스크 텍스트 변경</p>
-                                            <p>기타 javascript 작업 보조 </p>
+                                            <p>- kiosk 가로형 및 세로형 웹 퍼블리싱 100%</p>
+                                            <p>- ajex 통신으로 다국어 json 파일 로드 및 언어별 키오스크 텍스트 변경</p>
+                                            <p>- 기타 javascript 작업 보조 </p>
                                         </li>
                                     </ul>
                                 </div>
@@ -247,6 +259,29 @@
                                 <div class="sqs-block">
                                     <div class="sqs-button center">
                                         <a class="sqs-button__elem" href="./lottetower_hor_201224/index.html"
+                                            target="blank">View
+                                            Website</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="sqs-col-6">
+                            <div class="sqs-content">
+                                <div class="sqs-block">
+                                    <div class="sqs-image">
+                                        <img class="sqs-image__elem" src="./commonfiles/images/cccf.png">
+                                    </div>
+                                </div>
+                                <div class="sqs-block">
+                                    <div class="sqs-block-text center">
+                                        <h2>춘천 카페거리 메타버스</h2>
+                                        <p>램 사용량이 높으며 아이폰에서 작동이 원활하지 않을 수 있습니다</p>
+                                    </div>
+                                </div>
+                                <div class="sqs-block">
+                                    <div class="sqs-button center">
+                                        <a class="sqs-button__elem" href="https://metaverse.cccf.co.kr"
                                             target="blank">View
                                             Website</a>
                                     </div>
