--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                         <li>
                                             <p><span>넷스트림 :</span></p>
                                             <p>이노베이션팀 프론트엔드 개발자 (2021.07.26 - 2021.10.30 계약직)</p>
-                                            <p>춘천 카페거리 메타버스 프로젝트에 참여하였습니다.(2021.07.26 ~ 2021.09.03)</p>
+                                            <p>춘천 커피페스타 메타버스 프로젝트에 참여하였습니다.(2021.07.26 ~ 2021.09.03)</p>
                                             <br>
                                             <p>- 프로젝트 UI 퍼블리싱 100%</p>
                                             <p>- 2d 사이드 프론트엔드 개발 100%</p>
@@ -275,7 +275,7 @@
                                 </div>
                                 <div class="sqs-block">
                                     <div class="sqs-block-text center">
-                                        <h2>춘천 카페거리 메타버스</h2>
+                                        <h2>춘천 커피페스타 메타버스</h2>
                                         <p>램 사용량이 높으며 아이폰에서 작동이 원활하지 않을 수 있습니다</p>
                                     </div>
                                 </div>
